# neuro-hybridstil

./: Cargo.toml
examples/: basic_term_registration.rs  fokuspfad_workflow.rs
schemas/: knotenlexikon.json
src/: config.rs  error.rs  lib.rs
src/cluster_family/: graph.rs  mod.rs  primitives.rs
src/dualpfad/: hybridlast_path.rs  interop_path.rs  mod.rs
src/fokuspfad/: compression.rs  concept_anchor.rs  mod.rs  neologism_gen.rs  staging.rs
src/hybridstyler/: mod.rs  validator.rs  word_math.rs
src/knotenlexikon/: lexicon.rs  mod.rs  store.rs
src/sprachknoten/: mod.rs  multilingual.rs
